--- a/styles/style.css
+++ b/styles/style.css
@@ -84,7 +84,7 @@ address {
   padding-top: 172px;
   background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: overlay;
-  background-image: url(/images/cover.jpg);
+  background-image: url(./images/cover.jpg);
   background-size: cover;
   background-position: center;
   margin-bottom: 181px;
@@ -206,7 +206,7 @@ address {
 .card_type_film {
   background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: overlay;
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(./images/card-lot-01.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -214,7 +214,7 @@ address {
 .card_type_book {
   background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: overlay;
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(./images/card-lot-02.jpg);
   background-size: cover;
   background-position: center;
 }
@@ -222,7 +222,7 @@ address {
 .card_type_picture {
   background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: overlay;
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(./images/card-lot-03.jpg);
 
   background-size: cover;
   background-position: center;
@@ -272,7 +272,7 @@ address {
   margin-top: 27px;
   margin-right: 26px;
   background-color: black;
-  background-image: url(/images/logo-white.svg);
+  background-image: url(./images/logo-white.svg);
   border-radius: 50%;
   background-size: 149px 114px;
   background-position: center;
