5th try autotest

--- a/styles/style.css
+++ b/styles/style.css
@@ -324,6 +324,7 @@ footer {
   width: 1000px;
   grid-template-columns: 1fr 1fr 1fr;
   font-size: 18px;
+  margin-bottom: 88px;
 }
 
 .footer__menu {
