--- a/styles/style.css
+++ b/styles/style.css
@@ -25,6 +25,10 @@ header {
   color: #000000;
 }
 
+.header__logo_link {
+  display: block;
+}
+
 .header__logo {
   width: 148px;
   height: 105px;
@@ -40,20 +44,17 @@ header {
 .menu {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 31px;
   list-style-position: inside;
 }
 
 .menu__option {
   list-style: circle;
-  position: relative;
-  padding-left: 0px;
   text-decoration: underline;
   line-height: 21px;
   font-weight: 400;
   font-family: "Raleway";
   font-style: normal;
-  font-weight: 400;
   font-size: 18px;
   letter-spacing: 0.01em;
   color: #000;
@@ -94,7 +95,6 @@ address {
   font-weight: 700;
   font-size: 100px;
   line-height: 100px;
-  line-height: 100%;
   letter-spacing: 0.3em;
   text-transform: uppercase;
   text-align: left;
@@ -126,10 +126,6 @@ address {
   margin-top: 149px;
   margin-left: 26px;
   font-weight: 400;
-  font-size: 22px;
-  line-height: 127%;
-  text-transform: uppercase;
-  color: #fff;
   word-spacing: 19px;
 }
 
@@ -190,8 +186,6 @@ address {
   margin: 0, 0, auto;
   font-weight: 700;
   font-size: 22px;
-
-  line-height: 26px;
   line-height: 120%;
   text-transform: uppercase;
   text-decoration: underline;
@@ -234,7 +228,6 @@ address {
   padding-right: 40px;
   font-weight: 400;
   font-size: 20px;
-  line-height: 24px;
   line-height: 120%;
   color: #fff;
 }
