--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,9 @@
 body {
-  font-family: "Raleway", "sans-serif";
+  font-family: "Raleway", sans-serif;
 }
 
-.main_text_raleway {
-  font-family: "Raleway";
+.main_text {
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
   font-size: 20px;
   line-height: 120%;
@@ -11,12 +11,12 @@ body {
 }
 
 header {
-  height: 105px;
+  min-height: 105px;
   width: 1052px;
   display: grid;
   grid-template-columns: 4fr 3fr 2.37fr;
   margin-top: 92px;
-  margin-bottom: 96px;
+  margin-bottom: 91px;
   margin-left: auto;
   margin-right: auto;
   font-weight: normal;
@@ -53,7 +53,7 @@ header {
   text-decoration: underline;
   line-height: 21px;
   font-weight: 400;
-  font-family: "Raleway";
+  font-family: "Raleway", sans-serif;
   font-style: normal;
   font-size: 18px;
   letter-spacing: 0.01em;
@@ -66,10 +66,13 @@ header {
   text-decoration: none;
 }
 
+.menu__link {
+  text-decoration: none;
+}
+
 .address {
   margin-top: 6px;
   width: 240.52px;
-  height: 98px;
   line-height: 24.3px;
 }
 
@@ -79,7 +82,7 @@ address {
 
 .cover {
   width: 1100px;
-  height: 757px;
+  min-height: 757px;
   padding-left: 50px;
   padding-right: 50px;
   padding-top: 172px;
@@ -107,7 +110,7 @@ address {
   margin-top: 28px;
 }
 
-.title__last_line {
+.title__bottom_line {
   display: block;
   text-align: right;
   margin-top: 20px;
@@ -127,21 +130,26 @@ address {
   margin-left: 26px;
   font-weight: 400;
   word-spacing: 19px;
+  width: 700px;
+}
+
+.cover__subtitle__box {
+  display: flex;
 }
 
 .bet-button {
+  margin-top: 136px;
+  margin-left: 16px;
   background: transparent;
   width: 256px;
-  height: 51px;
+  min-height: 51px;
   border: 1px solid white;
   font-weight: 500;
   font-size: 22px;
   text-transform: uppercase;
   text-align: center;
   color: #fff;
-  position: relative;
-  left: 743px;
-  bottom: 41px;
+  font-family: "Raleway", sans-serif;
 }
 
 .lots {
@@ -165,7 +173,7 @@ address {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   gap: 23px;
-  height: 563px;
+  min-height: 563px;
 }
 
 .card-link {
@@ -249,12 +257,17 @@ address {
   margin-top: 31px;
 }
 
+.lots__link {
+  text-decoration: none;
+}
+
 .about {
   width: 1052px;
   margin: 0 24px 0;
   display: grid;
   grid-template-columns: 1fr 1.94fr;
-  grid-template-rows: 281px 145px 160px;
+  /*grid-template-rows: 281px 145px 160px;*/
+  grid-template-rows: auto;
 }
 
 .about__logo {
@@ -262,7 +275,7 @@ address {
   align-self: center;
   width: 240px;
   height: 240px;
-  margin-top: 27px;
+  margin-top: 32px;
   margin-right: 26px;
   background-color: black;
   background-image: url(../images/logo-white.svg);
@@ -283,6 +296,8 @@ address {
 .about__text {
   grid-column: 2;
   grid-row: 2/3;
+  margin-top: 12px;
+  margin-bottom: 24px;
   letter-spacing: 0.01em;
 }
 
@@ -311,7 +326,7 @@ address {
 
 footer {
   display: grid;
-  margin-top: 184px;
+  margin-top: 176px;
   margin-left: 50px;
   margin-right: 50px;
   width: 1000px;
